--- a/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/branding_bar.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/branding_bar.html
@@ -23,7 +23,7 @@ methods: {
 template: `
 <div>
   <v-card>
-    <v-app-bar :color="branding.colors.paper" position="absolute" height="100">
+    <v-app-bar :color="branding.colors.paper" height="100">
       <!-- <v-app-bar-nav-icon></v-app-bar-nav-icon> -->
 
       <v-toolbar-title>
