--- a/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/branding_bar.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/branding_bar.html
@@ -22,8 +22,8 @@ methods: {
 },
 template: `
 <div>
-  <v-card>
-    <v-app-bar :color="branding.colors.paper" height="100">
+  <!-- <v-card elevation="0"> -->
+    <v-app-bar elevation="0" :color="branding.colors.paper" height="100">
       <!-- <v-app-bar-nav-icon></v-app-bar-nav-icon> -->
 
       <v-toolbar-title>
@@ -31,20 +31,8 @@ template: `
       </v-toolbar-title>
 
       <v-spacer></v-spacer>
-      
-      <v-switch v-show="applicationConfiguration.branding.supportDarkMode" :color="branding.colors.accent" @click="$emit('update-dark-mode')" v-model="darkModeToggle">
-        <template v-slot:label>
-          <v-icon v-if="darkModeToggle" large color="#F5F5F5">
-            mdi-moon-waxing-crescent
-          </v-icon>
-          <v-icon v-else large color="#616161">
-            mdi-white-balance-sunny
-          </v-icon>
-        </template>
-      </v-switch>
-
     </v-app-bar>
-  </v-card>
+  <!-- </v-card> -->
 </div>
 `
 })
