prep de write/sfdc writes

--- a/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/survey_form_horizontal.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/survey_form_horizontal.html
@@ -57,7 +57,7 @@ Vue.component('survey-form-horizontal', {
         emit.subscriberId = this.subscriber.subscriberId;
         emit.emailAddress = this.subscriber.emailAddress;
 
-        console.log(emit)
+        // console.log(emit)
         this.$emit('submit-preference-form', emit)
       } else {
         Vue.$toast.error(`Please fill in all required fields`)
