--- a/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/unauthorized_user.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/unauthorized_user.html
@@ -1,24 +1,10 @@
 /*
-What is this component?
+  View that an unauthorized user would receive if using the subscriber validation component.
 */
 Vue.component('unauthorized-user', {
 props: {
   unauthorized: Object,
   branding: Object
-},
-mounted() {
-
-},
-data() {
-return {
-
-}
-},
-watch: {
-
-},
-methods: {
-
 },
 template: `
 <v-col cols="10" class="flex text-center mx-auto">
