--- a/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/survey_form_horizontal.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/survey_form_horizontal.html
@@ -1,20 +1,17 @@
 /*
-What is this component?
+  Main Survey Form Elements
+  All form information is provided by the nested survey_configuration files
 */
 Vue.component('survey-form-horizontal', {
   props: {
     branding: Object,
     survey: Array,
     surveyid: String,
-    formSubmitting: Boolean
-  },
-  beforeMount() {
+    formSubmitting: Boolean,
+    debug: Boolean
   },
   data() {
     return {
-      valid: false,
-      validation: {},
-      formValidation: {},
       formInputs: {},
       currentStep: 1,
       forceRender: true,
@@ -30,11 +27,13 @@ Vue.component('survey-form-horizontal', {
       const refs = this.$refs
       const refKeys = Object.keys(refs)
       const sectionOutput = []
+
       refKeys.forEach((key) => {
         const refArray = refs[key]
         const hasErrors = refArray.find((ref) => Object.values(ref.errorBag).includes(true)) && true || false
-        console.log(hasErrors)
         sectionOutput.push(hasErrors)
+
+        this.debug && console.log({key, hasErrors})
       })
       return sectionOutput
     },
@@ -43,15 +42,16 @@ Vue.component('survey-form-horizontal', {
       const refKeys = Object.keys(refs)
       const section = refs[refKeys[sectionIndex]]
       const hasErrors = section && section.find((ref) => Object.values(ref.errorBag).includes(true)) && true || false
+
+      this.debug && console.log({section, hasErrors})
       return hasErrors
-     
     },
     submitSurveyForm(event) {
       let emit = this.formInputs
       const validate = this.validate();
       const hasErrors = validate.some((section) => section !== false)
 
-      if(!hasErrors){
+      if (!hasErrors) {
         emit.surveyId = this.surveyid
         emit.subscriberKey = this.subscriber.subscriberKey;
         emit.subscriberId = this.subscriber.subscriberId;
@@ -62,6 +62,8 @@ Vue.component('survey-form-horizontal', {
       } else {
         Vue.$toast.error(`Please fill in all required fields`)
       }
+
+      this.debug && console.log({hasErrors, validate})
     },
     enableFormFields() {
       const section = this.currentStep - 1;
@@ -69,7 +71,7 @@ Vue.component('survey-form-horizontal', {
 
       formSection.forEach(input => {
         const inputName = input.name;
-        if(Object.prototype.hasOwnProperty.call(input, 'disabled')){
+        if (Object.prototype.hasOwnProperty.call(input, 'disabled')) {
           input.disabled = false;
         }
       })
@@ -81,10 +83,10 @@ Vue.component('survey-form-horizontal', {
       console.log(section)
       const hasErrors = this.validateSection(section)
 
-      if(!hasErrors){
+      if (!hasErrors) {
         formSection.forEach(input => {
           const inputName = input.name;
-          if(Object.prototype.hasOwnProperty.call(input, 'disabled')){
+          if (Object.prototype.hasOwnProperty.call(input, 'disabled')) {
             input.disabled = true;
           }
         })
@@ -94,37 +96,14 @@ Vue.component('survey-form-horizontal', {
         Vue.$toast.error(`Please fill in all Required fields`)
       }
     },
-    setupFormValidation() {
-      let validationObj = {};
-      this.survey.forEach((section, index) => {
-        validationObj[section.label] = [];
-      })
-
-      console.log(validationObj)
-      this.validation = validationObj;
-    },
-    handleValidate(event) {
-      if (event.hasErrors) {
-        this.formValidation.hasErrors = true;
-      } else {
-        this.formValidation.hasErrors = false;
-      }
-
-      console.log(event)
-    },
-    insertAfter(newNode, referenceNode) {
-      referenceNode.parentNode.insertBefore(newNode, referenceNode.nextSibling);
-    }
-  },
-  watch: {
   },
   computed: {
-    hasRules(){
+    hasRules() {
       const currentFormSectionIndex = this.currentStep - 1;
       const currentFormSection = this.survey[currentFormSectionIndex]
       return currentFormSection.form.some(section => Object.prototype.hasOwnProperty.call(section, 'rules'))
     },
-    hasDisabled(){
+    hasDisabled() {
       const currentFormSectionIndex = this.currentStep - 1;
       const currentFormSection = this.survey[currentFormSectionIndex]
       return currentFormSection.form.some(section => Object.prototype.hasOwnProperty.call(section, 'disabled'))
@@ -172,7 +151,7 @@ Vue.component('survey-form-horizontal', {
 
         }
 
-        return null 
+        return null
       }
       return null
     }
@@ -181,66 +160,48 @@ Vue.component('survey-form-horizontal', {
 <section>
   <v-row class="mx-auto">
     <v-col class="mx-auto" cols="12" md="9">
-      <v-stepper flat light v-model="currentStep">
+      <v-stepper light v-model="currentStep" class="p-4">
         <v-stepper-header>
           <span v-for="(label, index) in labels" :key="index + 1">
-          <v-stepper-step
-            color="#2e3543"
-            :complete="currentStep > index + 1"
-            :step="index + 1"
-          >
-            {{label}}
-          </v-stepper-step>
-          <v-divider></v-divider>
-        </span>
-    
+            <v-stepper-step color="#2e3543" :complete="currentStep > index + 1" :step="index + 1">
+              {{label}}
+            </v-stepper-step>
+            <v-divider></v-divider>
+          </span>
         </v-stepper-header>
         <span v-for="(s, index) in survey" :key="index + 1">
-          <v-stepper-content class="flex justify-space-around" :step="index + 1">
+          <v-stepper-content class="flex justify-space-around pa-5" :step="index + 1">
             <v-card flat color="" class="mb-12 pa-5" min-height="250">
-              <v-row  class="justify-end">
-                <v-icon
-                  v-if="hasDisabled" 
-                  large
-                  @click="enableFormFields"
-                >
+              <v-row class="justify-end">
+                <v-icon v-if="hasDisabled" large @click="enableFormFields">
                   mdi-pencil
                 </v-icon>
               </v-row>
               <v-row class="justify-center">
                 <v-col cols="12" md="10" class="">
                   <!-- Section Copy-->
-                  <span v-html="s.copy"></span> 
+                  <span v-html="s.copy"></span>
                   <v-divider class="my-3"></v-divider>
-                    <span v-for="(f, index) in s.form" :key="index">
-                      <v-form :ref="'form_' + s.ref">
-              
+                  <span v-for="(f, index) in s.form" :key="index">
+                    <v-form :ref="'form_' + s.ref">
                       <!-- handle text inputs -->
-                      <v-col
-                        v-if="f.type === 'text'"
-                        cols="12"
-                        md="8"
-                      >
-                        <v-text-field
-                          :label="f.label"
-                          v-model="formInputs[f.name]"
-                          :id="f.name"
-                          :disabled="f.disabled"
-                          :required="f.required"
-                          :rules="Object.values(f.rules)"
-                          update:error="true"
-                          outlined
-                        ></v-text-field>
+                      <v-col v-if="f.type === 'textarea'" cols="12" md="8">
+                        <span v-if="f.label">{{f.label}}</span>
+                        <v-textarea v-model="formInputs[f.name]" :id="f.name" outlined></v-textarea>
+                      </v-col>
+                      <!-- handle text inputs -->
+                      <v-col v-if="f.type === 'text'" cols="12" md="8">
+                        <span v-if="f.label">{{f.label}}</span>
+                        <v-text-field v-model="formInputs[f.name]" :id="f.name" :disabled="f.disabled"
+                          :required="f.required" :rules="Object.values(f.rules)" update:error="true" outlined>
+                        </v-text-field>
                       </v-col>
                       <!-- handle checkbox inputs -->
-                      <v-col  
-                        v-if="f.type ==='checkbox'"
-                        cols="12"
-                        md="10"
-                      >
+                      <v-col v-if="f.type ==='checkbox'" cols="12" md="10">
                         <span v-if="f.label">{{f.label}}</span>
                         <span v-if="f.rules">
-                          <v-checkbox v-for="(o, index) in f.options" :rules="Object.values(f.rules)" :key="o.label" v-model="formInputs[o.value]">
+                          <v-checkbox v-for="(o, index) in f.options" :rules="Object.values(f.rules)" :key="o.label"
+                            v-model="formInputs[o.value]">
                             <template v-slot:label>
                               <div>
                                 <span v-html="o.label"></span>
@@ -257,85 +218,43 @@ Vue.component('survey-form-horizontal', {
                             </template>
                           </v-checkbox>
                         </span>
-
                       </v-col>
                       <!-- handle radio inputs -->
-                      <v-col  
-                        v-if="f.type ==='radio'"
-                        cols="12"
-                        md="10"
-                      >
+                      <v-col v-if="f.type ==='radio'" cols="12" md="10">
                         <span v-if="f.label">{{f.label}}</span>
-                        <v-radio-group
-                          v-model="formInputs[f.name]"
-                          :rules="Object.values(f.rules)"
-                          row
-                        >
-                        <span v-for="r in f.options" :key="r.label">
-                          <v-radio
-                            :value="r.value"
-                          >
-                          <template v-slot:label>
-                            <div>
-                              {{r.label}}
-                                  <v-icon
-                                  v-if="r.tooltip"
-                                  small
-                                  slot="activator" 
-                                  v-tooltip.bottom-start="r.tooltip"
-                                  >
+                        <v-radio-group v-model="formInputs[f.name]" :rules="Object.values(f.rules)" row>
+                          <span v-for="r in f.options" :key="r.label">
+                            <v-radio :value="r.value">
+                              <template v-slot:label>
+                                <div>
+                                  {{r.label}}
+                                  <v-icon v-if="r.tooltip" small slot="activator" v-tooltip.bottom-start="r.tooltip">
                                     mdi-information
                                   </v-icon>
-                                
-                            </div>
-                          </template>
-                        </v-radio>
-                      </span>
+                                </div>
+                              </template>
+                            </v-radio>
+                          </span>
                         </v-radio-group>
                       </v-col>
                       <!-- handle select option inputs -->
-                      <v-col
-                        v-if="f.type === 'select'"
-                        class="d-flex"
-                        cols="12"
-                        md="8"
-                      >
-                      
-                        <v-col
-                          cols="12"
-                        >
-                           <v-select
-                          :items="f.options"
-                          :label="f.label"
-                          v-model="formInputs[f.name]"
-                          :rules="Object.values(f.rules)"
-                          rounded
-                          required
-                          outlined
-                        ></v-select>
-                        </v-col>
+                      <v-col v-if="f.type === 'select'" class="" cols="12" md="8">
+                        <v-row>
+                          <v-col cols="12">
+                            <span v-if="f.label">{{f.label}}</span>
+                          </v-col>
+                        </v-row>
+                        <v-row>
+                          <v-col cols="12">
+                            <v-select :items="f.options" v-model="formInputs[f.name]" :rules="Object.values(f.rules)"
+                              outlined></v-select>
+                          </v-col>
+                        </v-row>
                       </v-col>
                     </v-form>
-                    <v-row>
-                      <v-col
-                      cols="12"
-                      >
-                        <span v-if="formInputs[f.name] === 'My full product order will not be delivered until after my install start date'">
-                          <span class="mdi mdi-alert-circle" style="color: blue;"></span>
-                          Installations that required additional service visits may be subject to go-back fees.
-                        </span>
-
-                        <span v-if="formInputs[f.name] === 'Other'">
-                          <span class="mdi mdi-alert-circle" style="color: blue;"></span>
-                            A representative from IKEA will be in touch for more information.
-                        </span>
-
-                      </v-col>
-                    </v-row>
-                    </span> 
+                  </span>
                 </v-col>
               </v-row>
-
             </v-card>
             <v-btn v-if="currentStep !== 1" dark color="#0058a3" @click="currentStep = currentStep - 1">
               Back
@@ -347,7 +266,7 @@ Vue.component('survey-form-horizontal', {
               Submit
             </v-btn>
             <v-btn @click="formInputs = {}" text>
-              Cancel
+              Reset Form
             </v-btn>
           </v-stepper-content>
         </span>
